--- a/I2C_ADC_PRACTICE.ioc
+++ b/I2C_ADC_PRACTICE.ioc
@@ -8,28 +8,16 @@ ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC1.SamplingTimeOPAMP-0\#ChannelRegularConversion=ADC_SAMPLETIME_61CYCLES_5
 ADC1.master=1
-Dma.Request0=USART2_TX
-Dma.RequestsNb=1
-Dma.USART2_TX.0.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART2_TX.0.Instance=DMA1_Channel7
-Dma.USART2_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART2_TX.0.MemInc=DMA_MINC_ENABLE
-Dma.USART2_TX.0.Mode=DMA_NORMAL
-Dma.USART2_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART2_TX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.USART2_TX.0.Priority=DMA_PRIORITY_LOW
-Dma.USART2_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F3
 Mcu.IP0=ADC1
-Mcu.IP1=DMA
-Mcu.IP2=I2C1
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=USART2
-Mcu.IPNb=7
+Mcu.IP1=I2C1
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=USART2
+Mcu.IPNb=6
 Mcu.Name=STM32F303R(D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -54,7 +42,6 @@ Mcu.UserName=STM32F303RETx
 MxCube.Version=6.3.0
 MxDb.Version=DB.6.0.30
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.DMA1_Channel7_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
@@ -152,7 +139,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
 RCC.AHBFreq_Value=72000000
